k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: mern-app
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 8080
